# legal-graphrag-platform-vn

./: .dockerignore  .gitignore  Makefile  get_tt01.py  pyproject.toml  tree.txt
.agents/: AGENTS.md
.codex/: agents.md
.codex/rules/: .rules
.github/workflows/: docker-build-push.yml  pipeline-tests.yml
apps/backend/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  app.py  container.py  dependencies.py  main.py  requirements.txt  settings.py
apps/frontend/: .dockerignore  .prettierrc  AGENTS.md  Dockerfile  README.md  package-lock.json  package.json
configs/corpus/: curated_v1.json
configs/evaluation/: answer_pilot_l59_2020_REVIEW.md  (+4 more)
infra/: .env  .env.example  Makefile  README.md  docker-compose.m3.yml  docker-compose.yml
plan/: 00_architecture_decisions.md  01_research_contributions.md  02_ontology_specification.md  03_architecture.md  04_graph_construction_pipeline.md  05_graphrag_retrieval.md  07_implementation_timeline.md  09_open_questions.md  10_tech_stack.md  11_project_phases.md
plans/: 00_architecture_decisions.md  01_research_contributions.md  02_ontology_specification.md  03_architecture.md  04_graph_construction_pipeline.md  05_graphrag_retrieval.md  07_implementation_timeline.md  08_dataset_and_scope.md  09_open_questions.md  10_tech_stack.md  11_project_phases.md  12_design_tradeoffs.md  13_neo4j_integrity_strategy.md  README.md  legal_ontology.md  need-to-read.md
src/: __init__.py  ingestion.py
src/pipeline/: main.py  (+4 more)
tasks/: task-1.graph-construction-pipeline.md
tests/: test_graph_snapshot.py  test_m3_runtime_guard.py  test_m3_schema_verifier.py  test_milestone_a_report.py  test_ontology_consistency.py  test_validator_contract_parity.py  test_vector_smoke.py  test_writer_guard.py
(+307 files in other folders)
