[project]
name = "legal-graphrag-platform-vn"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "neo4j>=5.26",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1",
  "typer>=0.12",
  "flask>=3",
  "flask-cors>=4",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "playwright>=1.45",
  "tenacity>=8.3"
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.8",
]

embedding = [
  "torch",
  "sentence-transformers",
  "FlagEmbedding",
]

llm = [
  "openai>=1",
  "google-genai",
]

[tool.uv]
package = false
