[project]
name = "legal-graphrag-platform-vn"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "neo4j>=5.26",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1",
  "typer>=0.12",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "playwright>=1.45",
  "tenacity>=8.3",
  "fastapi>=0.139.0",
  "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8",
  "pytest-asyncio>=1.4.0",
  "pytest-cov>=5",
  "ruff>=0.8",
]

embedding = [
  "torch",
  "sentence-transformers",
  "FlagEmbedding",
]

llm = [
  "openai>=1",
  "google-genai",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.pytest.ini_options]
testpaths = ["src/pipeline/tests", "src/retrieval/tests", "tests"]
pythonpath = ["."]
addopts = "-m 'not integration'"
markers = [
  "integration: requires a disposable local Neo4j instance and optional model runtime",
]
